cluster/apps/notea/notea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notea
  namespace: notea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notea
  template:
    metadata:
      labels:
        app: notea
    spec:
      containers:
        - name: notea
          image: cinwell/notea:latest
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: notea
  namespace: notea
spec:
  type: NodePort
  selector:
    app: notea
  ports:
    - port: 80
      targetPort: 3000
      name: ui-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notea
  namespace: notea
  annotations:
    cert-manager.io/cluster-issuer: "${CERT_CLUSTER_ISSUER}"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    hajimari.io/enable: "true"
    hajimari.io/icon: "test-tube"
  labels:
    app.kubernetes.io/instance: notea
    app.kubernetes.io/name: notea
spec:
  ingressClassName: "traefik"
  rules:
  - host: "notea.${SECRET_DOMAIN}"
    http: 
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: notea
            port:
              number: 80
  tls:
    - hosts:
      - "notea.${SECRET_DOMAIN}"
      secretName: "notea-app-tls"
